# python_basic_homeworks

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: pylint.yml  pytest.yml
homework_01/: README.md  contacts.json  contacts.py
homework_02/: README.md  contact.py  contacts.json  controller.py  main.py  model.py  requirements.txt  tests.py  view.py
homework_04/: README.md  app.py  requirements.txt
homework_04/templates/: about.html  base.html  index.html  list.html  navbar.html
homework_05/: Dockerfile  README.md  app.py
homework_07/: README.md  docker-compose.yaml  requirements.txt
homework_08/: README.md  pyproject.toml
homework_08/my_app/: models.py  views.py
homework_09/: README.md  pyproject.toml
homework_09/config/: settings.py
homework_09/my_app/: urls.py  views.py
homework_10/: README.md  pyproject.toml
homework_10/my_app/: views.py
homework_11/: README.md  pyproject.toml
homework_11/config/: settings.py  urls.py
homework_11/my_app/: urls.py
homework_11/my_app/migrations/: 0001_initial.py
homework_11/my_app/tests/: conftest.py  test_forms.py  test_view.py
homework_12/: .pylint.rc  README.md  docker-compose.yaml  pyproject.toml
homework_12/config/: celery.py  settings.py
homework_12/my_app/: admin.py  tasks.py  views.py
homework_12/my_app/tests/: test_models.py  test_templates.py
homework_13/: README.md  pyproject.toml
homework_13/config/: celery.py
homework_13/my_app/: forms.py  models.py
homework_13/my_app/templates/my_app/: base.html  index.html  product_edit.html
(+12 files in other folders)
