[project]
name = "homework-12"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "celery[redis] (>=5.5.0,<6.0.0)",
    "django-celery-results (>=2.5.1,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.0"
pytest-mock = "^3.14.0"

